Fixed page overflow

--- a/public/game.css
+++ b/public/game.css
@@ -296,7 +296,7 @@
 
 #map-size-container {
     position: fixed;
-    bottom: 10px;
+    top: 10px;
     right: 10px;
     border-radius: 10px;
     z-index: 3;
@@ -307,11 +307,9 @@
 }
 
 .map-sizing{
-    /* padding: 11px 0px 5px 10px; */
     color:rgb(99, 65, 20);
     font-size: 35px;
     align-items: center;
-    /* margin: 10px; */
     font-weight: bold;
 }
 #user-sidebars {
